manifest/01-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-csi-app-set
spec:
  selector:
    matchLabels:
      app: mypod
  serviceName: "my-frontend"
  replicas: 1
  template:
    metadata:
      labels:
        app: mypod
    spec:
      containers:
      - name: my-frontend
        image: busybox
        args: #argumentos
        - sleep
        - infinity
        volumeMounts: #volumenes montados
        - mountPath: "/data"
          name: csi-pvc
  volumeClaimTemplates: #declaración del volumen
  - metadata:
      name: csi-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
      storageClassName: standard #crear un disco virtual en el proveedor de cloud y lo conecta al nodo en cuestión
