manifest/02-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    env: #variables de entorno
    - name: VARIABLE #nombre de la variable
      value: "lelelaloli" #valor de la variable
    - name: DD_AGENT_HOST
      valueFrom: #con el Downward API podemos heredar algunos valores intrinsecos de kubernetes
        fieldRef:
          fieldPath: status.hostIP #la ip del host donde correrá este pod
    resources: #recursos de los contenedores
      requests: #recursos que garantizamos al contenedor
        memory: "64Mi" #64 megabytes
        cpu: "200m" #200 milicores (1000 milicores = 1 core)
      limits: #límite máximo que puede llegar a usar el contenedor
        memory: "128Mi" #si se excede el kernel de linux va a matar el proceso y luego a recrear el pod
        cpu: "500m" #si se excede el proceso se verá obligado a usar su máximo
    readinessProbe: #explicarle a kubernetes que el pod está listo para recibir tráfico
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 10
    livenessProbe: #explicarle a kubernetes que el pod está vivo
      tcpSocket:
        port: 80
      initialDelaySeconds: 15
      periodSeconds: 20
    ports: #puerto expuesto
    - containerPort: 80
