manifest/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-2
spec:
  replicas: 3
  selector:
    matchLabels:
      role: hello-2
  template:
    metadata:
      labels:
        role: hello-2
    spec:
      containers:
      - name: hello-2
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
