manifest/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
spec:
  rules:
  - http:
      paths:
      - path: /v1 #ruta de ingreso
        pathType: ImplementationSpecific #no soportado Prefix
        backend:
          service: #servicio
            name: hello
            port: #puerto de entrada
              number: 8080
      - path: /v2
        pathType: ImplementationSpecific #no soportado Prefix
        backend:
          service:
            name: hello-2
            port:
              number: 8080
